--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "webpack": "^5.85.1",
     "webpack-cli": "^5.1.3"
   },
